--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.kevin_tian.kevin_ondraw1.MainActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_height="120dp"
-        android:layout_width="match_parent"
+    <com.example.kevin_tian.View.SimpleCircle
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
         android:id="@+id/recyclerview"/>
     <com.example.kevin_tian.View.CircleIndicator
         android:id="@+id/ci_1"
