--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.kevin_tian.kevin_ondraw1.MainActivity">
 
-    <com.example.kevin_tian.View.SimpleCircle
+    <com.example.kevin_tian.View.SimpleMatrix
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:id="@+id/recyclerview"/>
