--- a/app/src/main/res/layout/layout.xml
+++ b/app/src/main/res/layout/layout.xml
@@ -5,8 +5,8 @@
     android:layout_height="wrap_content">
 <TextView
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="adfaadsfad"
+    android:layout_height="46dp"
+    android:text="克明"
     android:textColor="@android:color/holo_red_light"
     android:id="@+id/myText"/>
 </LinearLayout>
